testament/tests/shouldfail/ttimeout.nim
discard """
  timeout: "0.1"
  targets: "c"
"""

import os

os.sleep(1000)
